# symbolicautomata

./: .gitignore  solveltl
benchmarks/: .classpath  .factorypath  CMakeLists.txt  pom.xml  solveafa
benchmarks/src/main/java/: BoolAfa.java  LtlEmptiness.java
benchmarks/src/main/java/boolafa/: BoolAfa.java  BoolAfaChecking.java
benchmarks/src/main/java/boolafa/parser/: WhitespaceOmittingReader.java
benchmarks/src/main/java/parser/: WhitespaceOmittingReader.java
benchmarks/src/main/java/utilities/: LtlEmptiness.java
benchmarks/src/main/native/include/: boolafa_BoolAfa.h  boolafa_BoolAfaChecking.h
benchmarks/src/main/native/src/: boolafa_BoolAfa.cpp  boolafa_BoolAfaChecking.cpp
models/: .classpath
models/src/main/java/automata/safa/: SAFA.java
models/src/main/java/automata/safa/booleanexpression/: PositiveBooleanExpressionFactorySimple.java
models/src/main/java/theory/sat/: SATBooleanAlgebraSimple.java
